--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
          </ul>
        </nav>
        <main>
-         <div id = primaryImg> <img id = "myImg" class = "mainImg" src="/Gaby Website/images/Main Image.png" alt="" />
+         <div id = primaryImg> <img id = "myImg" class = "mainImg" src="/images/Main Image.png" alt="" />
          </div>
        <ul id = "carouselLink">
-         <li id = "subImg1"><img class = "carousel" src="/Gaby Website/images/Carousel Image 1.png" alt="" />
+         <li id = "subImg1"><img class = "carousel" src="/images/Carousel Image 1.png" alt="" />
          </li>
-         <li id = "subImg2"><img class = "carousel" src="/Gaby Website/images/Carousel Image 2.png" alt=""/>
+         <li id = "subImg2"><img class = "carousel" src="/images/Carousel Image 2.png" alt=""/>
          </li id>
-         <li id = "subImg3"><img class = "carousel" src="/Gaby Website/images/Carousel Image 3.png" alt=""/>
+         <li id = "subImg3"><img class = "carousel" src="/images/Carousel Image 3.png" alt=""/>
          </li id>
-         <li id = "subImg4"><img class = "carousel" src="/Gaby Website/images/Carousel Image 4.png" alt=""/>
+         <li id = "subImg4"><img class = "carousel" src="/images/Carousel Image 4.png" alt=""/>
          </li>
-         <li id = "subImg5"><img class = "carousel" src="/Gaby Website/images/Carousel Image 5.png" alt=""/>
+         <li id = "subImg5"><img class = "carousel" src="/Carousel Image 5.png" alt=""/>
          </li>
-         <li id = "subImg6"><img class = "carousel" src="/Gaby Website/images/Carousel Image 6.png" alt=""/>
+         <li id = "subImg6"><img class = "carousel" src="/images/Carousel Image 6.png" alt=""/>
          </li>
-         <li id = "subImg7"><img class = "carousel" src="/Gaby Website/images/Carousel Image 7.png" alt=""/>
+         <li id = "subImg7"><img class = "carousel" src="/images/Carousel Image 7.png" alt=""/>
          </li>
-         <li id = "subImg8"><img class = "carousel" src="/Gaby Website/images/Carousel Image 8.png" alt=""/>
+         <li id = "subImg8"><img class = "carousel" src="/images/Carousel Image 8.png" alt=""/>
          </li>
         
         </ul>
