--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          </li id>
          <li id = "subImg4"><img class = "carousel" src="/images/Carousel Image 4.png" alt=""/>
          </li>
-         <li id = "subImg5"><img class = "carousel" src="/Carousel Image 5.png" alt=""/>
+         <li id = "subImg5"><img class = "carousel" src="/images/Carousel Image 5.png" alt=""/>
          </li>
          <li id = "subImg6"><img class = "carousel" src="/images/Carousel Image 6.png" alt=""/>
          </li>
